--- a/study/复习笔记.md
+++ b/study/复习笔记.md
@@ -198,6 +198,7 @@ String transient4; // not persistent because of @Transient
 4. 遇到了哪些问题, 如何解决的;
 
    # springboot了解吗. 说说原理?
+   springboot是一个集成了spring内核framework的框架, 能在spring轻量化的基础上简化spring的配置, 约定大约配置,自动装配, starter集成其他的很多功能. 
 
    # mysql索引了解吗?
 
