--- a/study/复习笔记.md
+++ b/study/复习笔记.md
@@ -198,8 +198,19 @@ String transient4; // not persistent because of @Transient
 4. 遇到了哪些问题, 如何解决的;
 
    # springboot了解吗. 说说原理?
-   springboot是一个集成了spring内核framework的框架, 能在spring轻量化的基础上简化spring的配置, 约定大约配置,自动装配, starter集成其他的很多功能. 
-
+   概念理解: springboot是一个集成了spring内核framework的框架, 能在spring轻量化的基础上简化spring的配置, 约定大约配置,自动装配, starter实现按需匹配. 
+   
+   
+   什么是 SpringBoot 自动装配？
+   springboot启动时会扫描时,其中将spring.factories配置类中的配置加载进spring配置进行了配置.
+   SpringBoot 是如何实现自动装配的？如何实现按需加载？
+   自动装配原理: @springBootApplication注解下的@EnableAutoConfiguration下有个AutoConfigurationImportSelector类, 实现了一个ImportSelector接口, 将符合条件的类加载到IoC容器中.@configurationXXX条件进行筛选,符合条件的组件会生效
+   如何实现一个 Starter？
+   1创建spring-boot-starter工程; 
+   2引入spring-boot相关依赖; 
+   3创建AutoConfigurationXXX类; 
+   4resource包下面建立springboot.factoryies;
+   5引入starter进工程
    # mysql索引了解吗?
 
    # mysql如何调优的?
