--- a/study/复习笔记.md
+++ b/study/复习笔记.md
@@ -220,10 +220,10 @@ String transient4; // not persistent because of @Transient
    索引底层数据结构?
    B+树和Hash表.
    hash表: key-->hashCode--> hash算法(扰动函数)得到hash值 -->取模运算(位与运算) --> index值 hash冲突(index相同) 利用链地址法 链表  jdk8后加入红黑树(自平衡的二叉查找树) 缺点:不支持顺序和范围查询
-   B树和B+树  多路平衡查找树.
-   B+树特点: 叶节点只存数据; 叶节点之间有引用链;b树对每个节点关键字进行二分查找, 还没到叶节点可能结束了, B+树查找稳定, 从根节点到叶节点, 叶节点的检索顺序很明显.
-   MyIsam 非聚簇索引 data存的数据的地址;
-   InnoDB 聚簇索引 data存的文件本身;索引的key是数据表的主键
+   -B树和B+树  多路平衡查找树.
+   -B+树特点: 叶节点只存数据; 叶节点之间有引用链;b树对每个节点关键字进行二分查找, 还没到叶节点可能结束了, B+树查找稳定, 从根节点到叶节点, 叶节点的检索顺序很明显.
+   -MyIsam 非聚簇索引 data存的数据的地址;
+   -InnoDB 聚簇索引 data存的文件本身;索引的key是数据表的主键
    
    索引类型
    主键索引:一张数据表只能有一个主键, 不能为null, 不能重复;innodb 如果没有唯一主键, 自动生成一个自增主键;
