--- a/study/复习笔记.md
+++ b/study/复习笔记.md
@@ -198,74 +198,78 @@ String transient4; // not persistent because of @Transient
 4. 遇到了哪些问题, 如何解决的;
 
    # springboot了解吗. 说说原理?
-   概念理解: springboot是一个集成了spring内核framework的框架, 能在spring轻量化的基础上简化spring的配置, 约定大约配置,自动装配, starter实现按需匹配. 
-   
-   
-   什么是 SpringBoot 自动装配？
+##  概念理解:
+   springboot是一个集成了spring内核framework的框架, 能在spring轻量化的基础上简化spring的配置, 约定大约配置,自动装配, starter实现按需匹配.
+##    什么是 SpringBoot 自动装配？
    springboot启动时会扫描时,其中将spring.factories配置类中的配置加载进spring配置进行了配置.
    SpringBoot 是如何实现自动装配的？如何实现按需加载？
-   自动装配原理: @springBootApplication注解下的@EnableAutoConfiguration下有个AutoConfigurationImportSelector类, 实现了一个ImportSelector接口, 将符合条件的类加载到IoC容器中.@configurationXXX条件进行筛选,符合条件的组件会生效
-   如何实现一个 Starter？
-   1创建spring-boot-starter工程; 
-   2引入spring-boot相关依赖; 
-   3创建AutoConfigurationXXX类; 
-   4resource包下面建立springboot.factoryies;
-   5引入starter进工程
+##    自动装配原理:
+   @springBootApplication注解下的@EnableAutoConfiguration下有个AutoConfigurationImportSelector类, 实现了一个ImportSelector接口, 将符合条件的类加载到IoC容器中.@configurationXXX条件进行筛选,符合条件的组件会生效
+##    如何实现一个 Starter？
+1.    创建spring-boot-starter工程;
+2.    引入spring-boot相关依赖;
+3.    创建AutoConfigurationXXX类;
+4.    resource包下面建立springboot.factoryies;
+5.    引入starter进工程
    # mysql索引了解吗?
-   什么是索引?
+##  什么是索引?
    相当于字典的目录, 没有索引时, 全表扫描. 建立索引后,先查索引,对应到位置. 索引是一种数据结构,
-   索引优缺点?
+## 索引优缺点?
    优点:速度, 唯一索引保证唯一性;
    缺点:耗费空间, 创建维护需要时间.
-   索引底层数据结构?
+## 索引底层数据结构?
    B+树和Hash表.
    hash表: key-->hashCode--> hash算法(扰动函数)得到hash值 -->取模运算(位与运算) --> index值 hash冲突(index相同) 利用链地址法 链表  jdk8后加入红黑树(自平衡的二叉查找树) 缺点:不支持顺序和范围查询
    -B树和B+树  多路平衡查找树.
    -B+树特点: 叶节点只存数据; 叶节点之间有引用链;b树对每个节点关键字进行二分查找, 还没到叶节点可能结束了, B+树查找稳定, 从根节点到叶节点, 叶节点的检索顺序很明显.
    -MyIsam 非聚簇索引 data存的数据的地址;
    -InnoDB 聚簇索引 data存的文件本身;索引的key是数据表的主键
-   
-   索引类型
+## 索引类型
    主键索引:一张数据表只能有一个主键, 不能为null, 不能重复;innodb 如果没有唯一主键, 自动生成一个自增主键;
-   二级索引:叶节点key值指向的是主键值; 
-    唯一索引 不重复, 可以为null, 可以多个唯一索引, 为了唯一性不是为了查询效率;
-    普通索引 可重复, 可以为null, 可以多个普通索引, 为了查询效率;
-    前缀索引 用于字符串类型 数据小;
-    全文索引 用于大文本;
-   聚集索引: 
+   二级索引:叶节点key值指向的是主键值;
+-     唯一索引 不重复, 可以为null, 可以多个唯一索引, 为了唯一性不是为了查询效率;
+-     普通索引 可重复, 可以为null, 可以多个普通索引, 为了查询效率;
+-     前缀索引 用于字符串类型 数据小;
+-     全文索引 用于大文本;
+   - 聚集索引:
+<br>
+
     优点: 快
     缺点: 1依赖有序的数据, 如果数据无序, 插入时要进行排序;2 更新代价大, 因此主键索引一般不可修改;
-   非聚集索引:
+   - 非聚集索引:
+<br>
+
     优点: 更新代价小
-    缺点: 1依赖有序的数据; 2可能二次查询(回表);
-   覆盖索引:
+    缺点: 1.依赖有序的数据; 2.可能二次查询(回表);
+   - 覆盖索引:
+<br>
+
     主键索引本身的key就是主键,查到就返回,不用回表, 称为覆盖索引;
     主键不宜过长: 二级索引会存储主键, 空间有限,过长会占用空间, 导致缓存区存储的索引值变少;
-   建索引注意事项:
-    频繁查询, 不为空, 更新不频繁.
-    1条件查询, 频繁排序, 频繁用于连接的字段;
-    2尽可能联合索引而不是单列索引;
-    3字符串上用前缀索引代替普通索引;
-   索引建议
-    1中型数据库用索引, 大型维护开销大不建议用;
-    2where条件用了函数导致无法命中索引; 函数破坏了索引的有序性, 优化器拒绝使用这个索引 
-    3使用逻辑主键不要用业务主键;
-    4limit offset 分页查询如果缓慢, 使用索引提高效率;
-    mysql添加索引
-alter table "table_name" add primary key ("column");
-alter table "table_name" add unique ("column");
-alter table "table_name" add index index_name ("column");
-alter table "table_name" add fulltext ("column");
-alter table "table_name" add index index_name("column1", "column2", "column3");
-   
-   
-   
+   - 建索引注意事项:
+<br>
+
+2.     频繁查询, 不为空, 更新不频繁.
+3.     条件查询, 频繁排序, 频繁用于连接的字段;
+4.     尽可能联合索引而不是单列索引;
+5.     字符串上用前缀索引代替普通索引;
+   - 索引建议
+<br>
+
+1.     中型数据库用索引, 大型维护开销大不建议用;
+2.     where条件用了函数导致无法命中索引; 函数破坏了索引的有序性, 优化器拒绝使用这个索引
+3.     使用逻辑主键不要用业务主键;
+4.     limit offset 分页查询如果缓慢, 使用索引提高效率;
+##     mysql添加索引
+- alter table "table_name" add primary key ("column");
+- alter table "table_name" add unique ("column");
+- alter table "table_name" add index index_name ("column");
+- alter table "table_name" add fulltext ("column");
+- alter table "table_name" add index index_name("column1", "column2", "column3");
 
    # mysql如何调优的?
 
    # redis用过吧,如何调优的?
-
-   
 
    # 多线程?
 
@@ -285,7 +289,7 @@ alter table "table_name" add index index_name("column1", "column2", "column3");
 
    # rocketMq
    ## 红黑树
-   
+
    ## ???索引失效的场景哪些?
 
-   
+ 
