--- a/study/复习笔记.md
+++ b/study/复习笔记.md
@@ -114,12 +114,13 @@ sesson 每次http请求创建一个 session有用
 
 
 ## 理解控制反转ioc
+<br>
 
-对象A依赖了对象B, a用到b的时候 , 要实例化, 之前是要通过a来实例化, 
+- 对象A依赖了对象B, a用到b的时候 , 要实例化, 之前是要通过a来实例化,
 
-控制反转后, b的实例化交给了容器, 指定 IOC 容器去创建一个对象b注入到对象 a 中 .
+- 控制反转后, b的实例化交给了容器, 指定 IOC 容器去创建一个对象b注入到对象 a 中 .
 
-a的主动控制变成了被动从容器中拿取, 实例化的控制权翻转给了容器, 称为控制反转.
+- a的主动控制变成了被动从容器中拿取, 实例化的控制权翻转给了容器, 称为控制反转.
 
 
 
@@ -204,7 +205,8 @@ String transient4; // not persistent because of @Transient
    springboot启动时会扫描时,其中将spring.factories配置类中的配置加载进spring配置进行了配置.
    SpringBoot 是如何实现自动装配的？如何实现按需加载？
 ##    自动装配原理:
-   @springBootApplication注解下的@EnableAutoConfiguration下有个AutoConfigurationImportSelector类, 实现了一个ImportSelector接口, 将符合条件的类加载到IoC容器中.@configurationXXX条件进行筛选,符合条件的组件会生效
+   @springBootApplication注解下的@EnableAutoConfiguration下有个AutoConfigurationImportSelector类,  
+   实现了一个ImportSelector接口, 将符合条件的类加载到IoC容器中.@configurationXXX条件进行筛选,符合条件的组件会生效
 ##    如何实现一个 Starter？
 1.    创建spring-boot-starter工程;
 2.    引入spring-boot相关依赖;
@@ -215,22 +217,31 @@ String transient4; // not persistent because of @Transient
 ##  什么是索引?
    相当于字典的目录, 没有索引时, 全表扫描. 建立索引后,先查索引,对应到位置. 索引是一种数据结构,
 ## 索引优缺点?
-   优点:速度, 唯一索引保证唯一性;
-   缺点:耗费空间, 创建维护需要时间.
+   - 优点:速度, 唯一索引保证唯一性;
+-    缺点:耗费空间, 创建维护需要时间.
 ## 索引底层数据结构?
    B+树和Hash表.
-   hash表: key-->hashCode--> hash算法(扰动函数)得到hash值 -->取模运算(位与运算) --> index值 hash冲突(index相同) 利用链地址法 链表  jdk8后加入红黑树(自平衡的二叉查找树) 缺点:不支持顺序和范围查询
-   -B树和B+树  多路平衡查找树.
-   -B+树特点: 叶节点只存数据; 叶节点之间有引用链;b树对每个节点关键字进行二分查找, 还没到叶节点可能结束了, B+树查找稳定, 从根节点到叶节点, 叶节点的检索顺序很明显.
-   -MyIsam 非聚簇索引 data存的数据的地址;
-   -InnoDB 聚簇索引 data存的文件本身;索引的key是数据表的主键
+<br>
+
+   hash表: key-->hashCode--> hash算法(扰动函数)得到hash值 -->取模运算(位与运算) --> index值 hash冲突(index相同) 利用链地址法 链表  jdk8后加入红黑树(自平衡的二叉查找树);
+缺点:不支持顺序和范围查询
+## -B树和B+树  多路平衡查找树.
+- B+树特点: 叶节点只存数据;
+- 叶节点之间有引用链;
+- b树对每个节点关键字进行二分查找, 还没到叶节点可能结束了, B+树查找稳定, 从根节点到叶节点, 叶节点的检索顺序很明显.
+<br>
+-MyIsam 非聚簇索引 data存的数据的地址;
+<br>
+-InnoDB 聚簇索引 data存的文件本身;索引的key是数据表的主键
 ## 索引类型
-   主键索引:一张数据表只能有一个主键, 不能为null, 不能重复;innodb 如果没有唯一主键, 自动生成一个自增主键;
+    主键索引:一张数据表只能有一个主键, 不能为null, 不能重复;
+	
+    innodb 如果没有唯一主键, 自动生成一个自增主键;
    二级索引:叶节点key值指向的是主键值;
--     唯一索引 不重复, 可以为null, 可以多个唯一索引, 为了唯一性不是为了查询效率;
--     普通索引 可重复, 可以为null, 可以多个普通索引, 为了查询效率;
--     前缀索引 用于字符串类型 数据小;
--     全文索引 用于大文本;
+     唯一索引 不重复, 可以为null, 可以多个唯一索引, 为了唯一性不是为了查询效率;
+     普通索引 可重复, 可以为null, 可以多个普通索引, 为了查询效率;
+     前缀索引 用于字符串类型 数据小;
+     全文索引 用于大文本;
    - 聚集索引:
 <br>
 
@@ -261,6 +272,7 @@ String transient4; // not persistent because of @Transient
 3.     使用逻辑主键不要用业务主键;
 4.     limit offset 分页查询如果缓慢, 使用索引提高效率;
 ##     mysql添加索引
+
 - alter table "table_name" add primary key ("column");
 - alter table "table_name" add unique ("column");
 - alter table "table_name" add index index_name ("column");
