--- a/study/复习笔记.md
+++ b/study/复习笔记.md
@@ -271,6 +271,7 @@ String transient4; // not persistent because of @Transient
 2.     where条件用了函数导致无法命中索引; 函数破坏了索引的有序性, 优化器拒绝使用这个索引
 3.     使用逻辑主键不要用业务主键;
 4.     limit offset 分页查询如果缓慢, 使用索引提高效率;
+5.	   禁止使用左模糊或全模糊查询, 最左前缀匹配特性:联合索引时,检索数据时从最左边开始匹配.
 ##     mysql添加索引
 
 - alter table "table_name" add primary key ("column");
@@ -280,7 +281,32 @@ String transient4; // not persistent because of @Transient
 - alter table "table_name" add index index_name("column1", "column2", "column3");
 
    # mysql如何调优的?
-
+1.    避免使用子查询, 用join操作代替: 子查询在临时表中,无法使用索引,会消耗大量磁盘资源和io资源,形成大量的慢查询,严重影响查询性能.
+2.    不要使用select*, 必须使用具体字段名称;
+3.    避免join关联太多的表, join关联表时会分配关联缓存, 形成临时表.
+4.    where中禁止使用函数转换, 因为会导致索引无法命中;
+5.    使用in代替or,能更有效的利用索引;
+# Mysql基础
+	概念:关系型数据库, 数据之间有关联,存在一对多,多对多的关联,存在表中.
+## 	Myisam和InnoDb引擎的区别:
+	 innoDb支持更多功能:
+-  	 行级锁 锁和mvcc(多版本并发控制)保证隔离性
+-  	 事务	 
+- 	 外键
+-  	 安全恢复  redo log 保证持久性  undo log 保证原子性
+mvvc是行级锁的升级
+mysql 默认事务级别 可重复读.
+## mysql执行原理
+1. 连接器 认证权限
+2. 查询缓存 myqsl8去除
+3. 分析器 分析语法
+4. 优化器 优化执行方案
+5. 执行器 执行,从执行引擎返回数据
+mysql分为server层和存储引擎
+- server 通用日志模块 连接, 缓存, 分析, 优化, 查询 .
+- 存储引擎 插件式 innodb的redolog模块在这里.memory
+查询语句流程: 权限-->缓存-->分析-->优化-->权限-->执行-->引擎
+更新:分析-->权限-->执行-->引擎-->redo log(prepare)-->binlog-->redo log(commit);
    # redis用过吧,如何调优的?
 
    # 多线程?
