--- a/study/复习笔记.md
+++ b/study/复习笔记.md
@@ -308,6 +308,26 @@ mysql分为server层和存储引擎
 查询语句流程: 权限-->缓存-->分析-->优化-->权限-->执行-->引擎
 更新:分析-->权限-->执行-->引擎-->redo log(prepare)-->binlog-->redo log(commit);
    # redis用过吧,如何调优的?
+##    reids三种缓存读写策略
+-    cacheAsidePattern 读请求比较多 常用;
+-     过程:写入:先更新DB再删除cache
+-    read/write through Pattern 少用  cache服务器负责cache和db的读写
+-     过程:写入:先查cache没有就更新db; 有就先更新cache,cache更新db(同步更新cache和db)
+-    write behind Pattern 少用 数据变化快 一致性要求不高 如: 浏览量 点赞数
+-     过程:和上者类似, 但是只更新cache数据, 然后异步批量更新db. 应用场景:消息队列存入磁盘,innodb buffer pool机制
+
+## redis概念
+缓存,分布式锁,消息队列;内存中,单线程;
+事务,持久化,lua脚本(轻量级脚本语言,标准c编写,可扩展),多种集群方案.
+## memcashed和redis的区别
+相同:都在内存中,过期策略,性能高;
+不同:
+1. 	redis支持持久化,
+2. 	redis单线程,memcashed多线程非阻塞io复用;
+3. 	发布订阅,事务,lua脚本,多语言;
+4. 	更丰富数据类型;
+5. 	过期数据redis惰性删除和定期删除, memcashed只有惰性删除;
+6. 	redis原生集群方式;
 
    # 多线程?
 
