--- a/study/复习笔记.md
+++ b/study/复习笔记.md
@@ -328,6 +328,53 @@ mysql分为server层和存储引擎
 4. 	更丰富数据类型;
 5. 	过期数据redis惰性删除和定期删除, memcashed只有惰性删除;
 6. 	redis原生集群方式;
+## 为何要用缓存?
+高性能, 高并发.
+## redis支持数据类型
+1. 	string 简单动态字符串 sds 可以保存二进制和文本 sds api安全 不会造成缓冲区 数据溢出.常用命令 		strlen mget mset(批量) setex(设置有过期时间值) expire(过期时间)
+2. 	hash 类似jdk8之前的hashMap 用于存储对象 常用命令 hset hmset hexists hget hgetall hkeys 	hvals等
+3. 	list 双向链表	支持反向查找和遍历 常用命令: rpush rpop lpop lpush lrange  llen等
+	用于: 发布订阅 消息队列 慢查询
+4. 	set 类似hashset 不重复 场景:不重复,交集并集. 常用命令:sadd, spop, smembers, sismember, 		scard(查看长度), sinterstore(获取交集), sunion等.
+5. 	zset(sorted set) 比set多了权重score类似treeSet和HashMap的合体. 应用场景:根据权重排序
+	常用命令:zadd, zcard(查看数量), zscore, zrange(输出范围内元素), zrevange(逆序输出), zrem等
+	bitmap  存储的连续的二进制数据 应用场景:保存状态,用户签到,活跃用户,用户行为统计 常用命令: setbit getbit bitcount bitop.?????没有理解如何存储的.
+## 	redis单线程模型
+  reactor模式 事件处理模型  文件事件处理器(file event handler)
+##   如何处理大量请求?
+  io多路复用程序 监听客户端的多个socket 将感兴趣的时间或类型(读写)注册到内核并监听事件发生.(类似于Nio中的selector)
+  时间事件
+##   文件事件
+-   多个socket(客户端连接)
+-   io多路复用程序(支持多个客户端连接的关键)
+-   文件事件分派器(将socket关联到相应的事件处理器)
+-   事件处理器	(连接应答处理器 命令请求处理器 命令应答处理器)
+##   redis多线程
+	redis4.0增加了删除大键值对的多线程模式 redis6.0之前主要是单线程;
+## 	为何不适用多线程?
+- 	单线程容易好维护
+- 	redis瓶颈不在cpu而在内存和网络, 多线程需求不高
+- 	多线程复杂死锁,上线文切换等 甚至会影响性能
+## 	redis6.0为何新增了多线程
+-  	提高io读写的性能 
+- 	默认关闭多线程, 修改文件redis.config
+- 	io-threads-do-reads yes
+- 	io-threads 4 #官网建议4核的机器建议设置为2或3个线程，8核的建议设置为6个线程
+## redis如何判断数据过期时间的
+	过期字典(看成hash表) 键值存key 过期字典long long类型整数  存着key对应数据库键的过期时间(unix时间戳)
+## 	删除策略
+惰性删除 取数据时候查看是否过期. cpu友好
+过期删除 隔段时间删除 redis内部限制执行时间和频率减少对cpu影响. 内存友好
+## 内存淘汰策略
+volatile-lru least recently used 设置过期时间中 最近最少使用
+volatile-ttl 过期时间中选
+volatile-random 过期时间中随机
+allkeys-lru 内存不够写入时 最少最近使用  最常用
+allkeys-random server.db[i].dict 随机
+no-eviction 内存不够新写入报错
+
+volatile-lfu 过期 最少经常使用
+allkeys-lfu 内存不够 最少经常使用
 
    # 多线程?
 
