--- a/study/复习笔记.md
+++ b/study/复习笔记.md
@@ -363,20 +363,69 @@ mysql分为server层和存储引擎
 ## redis如何判断数据过期时间的
 	过期字典(看成hash表) 键值存key 过期字典long long类型整数  存着key对应数据库键的过期时间(unix时间戳)
 ## 	删除策略
-惰性删除 取数据时候查看是否过期. cpu友好
-过期删除 隔段时间删除 redis内部限制执行时间和频率减少对cpu影响. 内存友好
+- 	惰性删除 取数据时候查看是否过期. cpu友好
+- 	过期删除 隔段时间删除 redis内部限制执行时间和频率减少对cpu影响. 内存友好
 ## 内存淘汰策略
-volatile-lru least recently used 设置过期时间中 最近最少使用
-volatile-ttl 过期时间中选
-volatile-random 过期时间中随机
-allkeys-lru 内存不够写入时 最少最近使用  最常用
-allkeys-random server.db[i].dict 随机
-no-eviction 内存不够新写入报错
+- 	volatile-lru least recently used 设置过期时间中 最近最少使用
+- 	volatile-ttl 过期时间中选
+- 	volatile-random 过期时间中随机
+- 	allkeys-lru 内存不够写入时 最少最近使用  最常用
+- 	allkeys-random server.db[i].dict 随机
+- 	no-eviction 内存不够新写入报错
 
-volatile-lfu 过期 最少经常使用
-allkeys-lfu 内存不够 最少经常使用
+- 	volatile-lfu 过期 最少经常使用
+- 	allkeys-lfu 内存不够 最少经常使用
+## redis持久化
+### rdb(redis database)
+	快照snapshotting redis主从结构 默认方式 
+	```lua
+save 900 1 #在900秒(15分钟)之后，如果至少有1个key发生变化，Redis就会自动触发BGSAVE命令创建快照。
+```
 
-   # 多线程?
+### aof(append-only file)
+  aop实时性更好 默认文件名 appendonly.aof 命令:
+```lua
+  appendonly yes       #开启
+  appendfsync always    #每次有数据修改发生时都会写入AOF文件,这样会严重降低Redis的速度
+  appendfsync everysec  #每秒钟同步一次，显示地将多个写命令同步到硬盘  (推荐)
+  appendfsync no        #让操作系统决定何时进行同步 
+```
+redis支持混合持久化 aof-use-rdb-preamble 开启.此时aof重写时将rdb内容写下aof头上,但是压缩文件格式的rdb,可读性差.
+##  aof重写
+- bgrewriteaof命令开启重写
+- 数据库 AOF 重写缓冲区, 子线程创建新aof文件, 缓存区会记录服务器在此期间的写操作.
+- aof重写完成后, 将缓冲区追加到文件末尾.
+- 新的aof文件替代旧文件.
+## redis事务
+1. 	multi  开启事务, 开启后将多个命令加到队列中(fifo队列)
+2. 	exec   将队列中的多个命令一起执行
+3. 	discard  丢弃队列中的命令
+4. 	watch  指定键 如果改变,事务直接失败
+特点: 不支持原子性和持久性, 不会回滚, 可以理解成命令的打包执行, 中途不会被打断.
+## 缓存穿透
+ 理解:大量查询未击中缓存都落到数据库上.
+ 解决:
+ 缓存无效key
+- 	 如果缓存和数据库都不存在的key, 将其存到redis中并设置过期时间. 只能解决key变化不频繁的情况, 为了解决缓存穿透, 过期时间要设置短.
+- 	 使用布隆过滤器
+ 概括:能判断海量数据中是否存在某个数据: 是, 则大概率存在; 否, 一定不存在;
+ - 简单原理: 
+- 	 一个元素加入布隆过滤器时:获取hashcode, 对应的位数组下标置为1;
+- 	 判断一个元素时:获取hashcode, 判断位数组中是否都为1, 是,则在;否,则不在.
+## 缓存雪崩
+概括: 缓存大面积失效, 都去访问数据库;
+<br>
+解决方法:
+- 	针对redis不可用: 1.使用redis集群; 2.限流
+- 	针对热点数据失效: 1.设置不同过期时间; 2.缓存永不失效;
+-    # 多线程?
+## 保证数据库和缓存一致性?
+cashe aside pattern 旁路缓存模式: 写数据时, 更新db, 删除cash;
+<br>
+- 	如果更新成功,删除失败:
+- 	缓存失效时间设短:先查缓存再查db不适用, 治标不治本, 不推荐
+- 	cash更新重试机制(推荐):可设置重试次数, 如果还是失败, 将key存到队列中, 待缓存服务可用后删除缓存对应key;
+
 
    # dubbo介绍下?
 
