--- a/study/复习笔记.md
+++ b/study/复习笔记.md
@@ -428,6 +428,40 @@ cashe aside pattern 旁路缓存模式: 写数据时, 更新db, 删除cash;
 
 
    # dubbo介绍下?
+##    rpc
+理解: remote procedure call 远程过程调用. 屏蔽网络层调用, 使远程调用像本地调用一样简单.
+rpc原理
+- 	消费端 stub 代理类 方法,类信息等提起访问请求
+- 	网络传输: socket或者Netty;
+- 	服务端 stub(skeleton),接受到请求后, 去指定对应的方法并返回结果.
+## dubbo
+轻量级java rpc框架
+远程调用, 智能负载均衡, 注册发现等功能. 扩展, 流量调度, 服务治理和运维;
+## dubbo架构
+container 服务运行容器
+provider
+consumer
+registry
+monitor
+## dubbo的invoker概念了解吗?
+动态代理屏蔽远程调用的细节, 依赖于invoker进行实现.
+dubbo的工作原理
+从下到上共10层,
+service 
+config 配置 serviceConfig referenceConfig
+proxy 代理 serviceProxy 真实调用依赖代理类
+registry 
+cluster 提供者的路由和负载均衡, 桥接注册中心, invoker
+
+monitor statistics 调用次数,时间监控
+protocol 封装rpc调用 invocation result
+exchange 封装请求响应模式, 同步转异步, request response;
+transport mina和netty message
+serialize 序列化
+
+
+
+
 
    # jvm如何调优的?
 
