--- a/study/复习笔记.md
+++ b/study/复习笔记.md
@@ -447,17 +447,17 @@ monitor
 动态代理屏蔽远程调用的细节, 依赖于invoker进行实现.
 dubbo的工作原理
 从下到上共10层,
-service 
-config 配置 serviceConfig referenceConfig
-proxy 代理 serviceProxy 真实调用依赖代理类
-registry 
-cluster 提供者的路由和负载均衡, 桥接注册中心, invoker
+1. 	service 
+2. 	config 配置 serviceConfig referenceConfig
+3. 	proxy 代理 serviceProxy 真实调用依赖代理类
+4. 	registry 
+5. 	cluster 提供者的路由和负载均衡, 桥接注册中心, invoker
 
-monitor statistics 调用次数,时间监控
-protocol 封装rpc调用 invocation result
-exchange 封装请求响应模式, 同步转异步, request response;
-transport mina和netty message
-serialize 序列化
+7. 	monitor statistics 调用次数,时间监控
+8. 	protocol 封装rpc调用 invocation result
+9. 	exchange 封装请求响应模式, 同步转异步, request response;
+10. 	transport mina和netty message
+11. 	serialize 序列化
 
 
 
