--- a/study/复习笔记.md
+++ b/study/复习笔记.md
@@ -479,5 +479,19 @@ dubbo的工作原理
    ## 红黑树
 
    ## ???索引失效的场景哪些?
+# 概念强化
+jwt  java web token
+sso single sign on 
+Authentication 认证 访问时候辨别身份
+Authorization 授权  授予权限
+sgov ??哪种认证方式?
+Apollo 某种配置中心
+EDM 组件 
+OData 模型
+CXF 访问协议
+
+## jalor学习
+Apollo 
+
 
  
