--- a/study/复习笔记.md
+++ b/study/复习笔记.md
@@ -378,9 +378,9 @@ mysql分为server层和存储引擎
 ## redis持久化
 ### rdb(redis database)
 	快照snapshotting redis主从结构 默认方式 
-	```lua
+
 save 900 1 #在900秒(15分钟)之后，如果至少有1个key发生变化，Redis就会自动触发BGSAVE命令创建快照。
-```
+
 
 ### aof(append-only file)
   aop实时性更好 默认文件名 appendonly.aof 命令:
@@ -458,7 +458,21 @@ dubbo的工作原理
 9. 	exchange 封装请求响应模式, 同步转异步, request response;
 10. 	transport mina和netty message
 11. 	serialize 序列化
+## dubbo和dubbox
+dubbox是当当网基于dubbo的扩展版本 新增的功能包括:
+- 	支持rest风格远程调用(Http + json/xml);
+- 	升级了spring;
+- 	升级了zookeeper客户端;
+- 	支持完全基于java的配置;
+- 	支持kryo和fst序列化????? 
 
+## Dubbo的spi机制了解吗?
+spi service provider interface 
+大概原理: 将实现类配置在配置文件中, 远程调用时加载配置文件, 反射加载实现类. dubbo对java原生spi加强了.
+实现loadBalance接口或abstractLoadBalance类
+## dubbo的微内核架构
+核心系统和插件模块 core system  plugin modules
+## 序列化协议
 
 
 
@@ -466,6 +480,28 @@ dubbo的工作原理
    # jvm如何调优的?
 
    ## jvm结构
+###    介绍下 Java 内存区域（运行时数据区）
+- 	java堆   对象  公用  几乎所有对象和数组.新生代, 老年代, 永生代(jdk8后永生代去掉了, 用直接内存的元空间代替)
+	eden初始化对象->新生代gc后如果存在->进入survivor年龄加1->达到阈值进入老年代
+	outOfMeEemory GC OverHead Limit Exceed  执行太多时间gc回收内存少.
+	OutOfMemoryError java heap space : 堆内存不足以创建新的对象; 配置的内存太小.
+- 	虚拟机栈  java方法执行的内存模型. 栈帧: 局部变量表: 基本类型, 对象引用(指针, 句柄或者偏移量);
+	 操作数栈, 动态链接, 方法出口信息. stackOverFlowError 栈溢出异常. java虚拟机栈如果不允许动态扩展, 当前线程请求栈的深度超过当前栈的深度抛出;outOfMemoryError java虚拟机栈内存可以动态扩展, 扩展时无法申请到足够的内存空间,抛出. return 或者 抛出 异常 栈帧被弹出.
+- 	本地方法栈  类似虚拟机栈
+- 	方法区  常量, 静态变量,  类  公用
+	方法区是一种虚拟的概念: 永久代是方法区的一种实现.  永久代是HotSpot的概念, 方法区是java虚拟机的规范的定义.jdk8后 方法区(永久代)被移除了, 用元空间代替, 元空间使用的直接内存.直接内存收本机内存大小影响. 永久代有jvm固定的内存上限.
+### 	使用元空间的原因
+1.  永久代有jvm固定的内存上限, 元空间
+2. 	元空间存类的元数据, 加载多少元数据由系统内存决定, 可以加载更多元数据;
+3. 	合并了HotSpot和JRockit
+### 运行时常量池
+ 	方法区一部分 class文件类版本, 字段, 方法, 接口, 还有常量池
+- 	程序计数器  1.字节码解释器 改变计数器的值来获取下一条需要执行的字节码指令, 来控制程序的执行:循环,判断, 异常,跳转; 2.记录当前线程的位置, 保证线程的切换.  不会 outOfMemoryError
+
+### Java 对象的创建过程（五步，建议能默写出来并且要知道每一步虚拟机做了什么）
+### 对象的访问定位的两种方式（句柄和直接指针两种方式）
+### String 类和常量池
+### 8 种基本类型的包装类和常量池
 
    ## gc过程
 
@@ -479,6 +515,9 @@ dubbo的工作原理
    ## 红黑树
 
    ## ???索引失效的场景哪些?
+
+## mybatis 执行流程
+[mybatis执行流程](https://blog.csdn.net/yuanshangshenghuo/article/details/119007391)
 # 概念强化
 jwt  java web token
 sso single sign on 
@@ -489,15 +528,8 @@ Apollo 某种配置中心
 EDM 组件 
 OData 模型
 CXF 访问协议
-
-##开发疑问
-2022.03.17
-新建一个变量和重复取属性谁高效?
-策略模式?套用代码?
-jvm内存溢出如何处理? 数据库连接池closed 如何处理?
-
-
-
+Kryo ?
+FST  ?
 
 ## jalor学习
 Apollo 
